# jarvis-os

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/: __init__.py  main.py
backend/agents/: __init__.py  dispatcher.py  exceptions.py  manager.py  registry.py
backend/ai/: __init__.py  conversation.py  prompt_manager.py  runtime.py
backend/common/: __init__.py  constants.py
backend/config/: environments.py  manager.py  settings.py  validation.py
backend/container/: __init__.py  container.py  dependencies.py  providers.py
backend/core/: application.py  context.py
backend/events/: __init__.py  bus.py  event.py  exceptions.py  publisher.py  subscriber.py
backend/planner/: __init__.py  executor.py  formatter.py  parser.py  planner.py  schemas.py  validator.py
backend/runtime/: __init__.py  exceptions.py  lifecycle.py  runtime.py  service_registry.py  state.py
docs/architecture/: 01-system-architecture.md  02-ai-runtime.md  03-memory-engine.md  04-context-engine.md  05-vision-engine.md  06-voice-engine.md  07-personal-knowledge-base.md  08-multi-agent-system.md  09-tool-runtime.md  10-automation-engine.md  11-security-architecture.md  12-plugin-agent-sdk.md  13-ai-desktop-environment.md  14-system-integration-implementation-blueprint.md
jarvis_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/integration/: test_browser.py  test_ollama.py  test_search.py
tests/unit/: test_api.py  test_browser_tool.py  test_container.py  test_conversation_memory.py  test_dispatcher.py  test_event_bus.py  (+4 more)
(+79 files in other folders)
